syntax = "proto3";

package service.ourchat.set_account_info.v1;

message SetSelfInfoRequest {
  optional string user_name = 2;
  optional string avatar_key = 3;
  optional string status = 4;
  optional string ocid = 5;
}



message SetSelfInfoResponse {}

